[package]
name = "riscv-128bit-vm"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "A high-performance 128-bit RISC-V virtual machine implemented in Rust, featuring custom instruction set extensions and advanced memory management."
readme = "README.md"
repository = "https://github.com/olele114/riscv-128bit-vm"

[dependencies]
bitflags = "2.10.0"
